Eventlistener e controllo in array

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Linked CSS -->
+    <link rel="stylesheet" href="css/style.css">
     <title>Campo Minato</title>
 </head>
 <body>
+    <div id="main-container" class="container clearfix">
+
+    </div>
+
+    <!-- Linked JS  -->
     <script src="js/main.js"></script>
 </body>
 </html>
